Task2 - validate username using not-allowed-names

--- a/javacruitment-application/src/main/resources/application.yaml
+++ b/javacruitment-application/src/main/resources/application.yaml
@@ -23,3 +23,6 @@ springdoc:
     path: /swagger-ui.html
   api-docs:
     path: /api-docs
+
+not-allowed-names:
+    entries: admin,administrator,root
